fixs device compatibility

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               </div>
             </div>
             <!-- slide nav -->
-            <div class="slide-nav bg-white d-lg-none">
+            <div class="slide-nav bg-white d-lg-none shadow-lg rounded-3 ">
               <!-- navigations -->
               <ul class="nav-wrapper">
                 <li>
