portfolios section with responsive

--- a/index.html
+++ b/index.html
@@ -484,8 +484,8 @@
       <!-- ABOUT US START -->
       <section class="home-about">
         <div class="content-container">
-          <div class="row ">
-            <div class="mb-5 mb-lg-0  col-lg-5">
+          <div class="row gx-lg-5">
+            <div class="mb-5 mb-lg-0 col-lg-5">
               <div class="about-left position-relative ">
                 <img src="./assets/about-left.png" alt="tryesy family">
                 <!-- about rounded text -->
@@ -552,7 +552,7 @@
                     </li>
                   </h4>
                   <h3 class="content-title">
-                    We are the ones who <br class="d-none "> create the future.
+                    We are the ones who <br class="d-none d-md-block d-lg-none "> create the future.
                   </h3>
                   <p>
                     Whether it's on a website, an app, or a search engine, this simple phrase can evoke a mix of emotions from confusion to exasperation. But fear not, for in these moments, there are strategies and solutions that can help you find your way.
@@ -586,9 +586,52 @@
       <!-- ABOUT US END -->
       <!-- PORTFOLIO START -->
       <section class="home-portfolios overflow-hidden ">
-        <div class="conatainer-fluid">
+        <div class="portfolio-container">
           <div class="bold-slogan">
             <h3>We are the builders of the digital future</h3>
+          </div>
+          <!-- portfolios -->
+          <div class="row gy-5">
+            <div class="col-sm-6 col-xl-3">
+              <div class="item-1 portfolio">
+                <img src="./assets/portfolio-1.png" alt="tryesy portfolio">
+                <!-- hoverable card -->
+                <div class="hover-card bg-white position-absolute ">
+                  <h5>Usability</h5>
+                  <p class="text-black">We work to make them a reality.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-xl-3">
+              <div class="item-2 portfolio">
+                <img src="./assets/portfolio-2.png" alt="tryesy portfolio">
+                 <!-- hoverable card -->
+                 <div class="hover-card bg-white position-absolute ">
+                  <h5>Usability</h5>
+                  <p class="text-black">We work to make them a reality.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-xl-3">
+              <div class="item-3 portfolio">
+                <img src="./assets/portfolio-3.png" alt="tryesy portfolio">
+                 <!-- hoverable card -->
+                 <div class="hover-card bg-white position-absolute ">
+                  <h5>Usability</h5>
+                  <p class="text-black">We work to make them a reality.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-xl-3">
+              <div class="item-4 portfolio">
+                <img src="./assets/portfolio-4.png" alt="tryesy portfolio">
+                 <!-- hoverable card -->
+                 <div class="hover-card bg-white position-absolute ">
+                  <h5>Usability</h5>
+                  <p class="text-black">We work to make them a reality.</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
